--- a/content/psychology/4-beginner-psychology-resources/post.mdx
+++ b/content/psychology/4-beginner-psychology-resources/post.mdx
@@ -12,14 +12,15 @@ popular: false
 
 ![](https://1.bp.blogspot.com/-MzRpzIRzmyQ/XPRAQ5AJm7I/AAAAAAAAMlU/w1_joHJXzmQ_dS_JxpdBJx4i6Cc-yBalACLcBGAs/s400/communication-4237439_1280.jpg)
 
-  
+ ![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg "The Stormtroopocat") 
 
-<a href="https://1.bp.blogspot.com/-MzRpzIRzmyQ/XPRAQ5AJm7I/AAAAAAAAMlU/w1_joHJXzmQ_dS_JxpdBJx4i6Cc-yBalACLcBGAs/s1600/communication-4237439_1280.jpg" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="768" data-original-width="1280" height="240" src="https://1.bp.blogspot.com/-MzRpzIRzmyQ/XPRAQ5AJm7I/AAAAAAAAMlU/w1_joHJXzmQ_dS_JxpdBJx4i6Cc-yBalACLcBGAs/s400/communication-4237439_1280.jpg" width="400" /></a>
+![](https://1.bp.blogspot.com/-MzRpzIRzmyQ/XPRAQ5AJm7I/AAAAAAAAMlU/w1_joHJXzmQ_dS_JxpdBJx4i6Cc-yBalACLcBGAs/s1600/communication-4237439_1280.jpg)
 
 This post begins with already working project and app's, I found that there some few requirement's
-that my project needed to handle and the best option for those requirement's was to use the Django's&nbsp; Rest Framework. The way that I will tackle this task is more specific to the needs of the project rather than a one to one how to..., that being said you can still follow along, the approach that I'm going to use is easy to follow since I'll be providing a lot of information a log the way for better understanding of the why and how.....this code is available on <a href="https://github.com/kazz54/REST-API" target="_blank">Github</a>, enough with the alerts and on with the show.
+that my project needed to handle and the best option for those requirement's was to use the Django's&nbsp; Rest Framework. The way that I will tackle this task is more specific to the needs of the project rather than a one to one how to..., that being said you can still follow along, the approach that I'm going to use is easy to follow since I'll be providing a lot of information a log the way for better understanding of the why and how.....this code is available on <a href="https://github.com/kazz54/REST-API", enough with the alerts and on with the show.
 
-If you would want to mimic the exactly settings then you will need to enable user authentication on your project you can <a href="https://cloudtails.blogspot.com/2019/05/django-user-authentication-how-to-login.html" target="_blank">follow this link for details</a>.&nbsp;
+If you would want to mimic the exactly settings then you will need to enable user authentication on your project you can  
+(https://cloudtails.blogspot.com/2019/05/django-user-authentication-how-to-login.html) follow this link for details
 
 Start with the DRF (Django Rest Framework) installation
 
@@ -61,7 +62,7 @@ INSTALLED_APPS = [
 My model look's like this
 
 
-
+```python
 nano base/models.py
 
 
@@ -88,11 +89,12 @@ class Post(models.Model):
  created_date = models.DateTimeField(default=timezone.now)
 
 
- style="color: lime;">""" style="color: red;">Return a human readable representation of the model instance. style="color: lime;">"""
+ Return a human readable representation of the model instance. 
 
  def __str__(self):
 
   return self.title
+```
 
 
 
@@ -111,7 +113,7 @@ A Serializer transforms model instances into JSON or XML. This the real great fu
 Adding endpoints to the Post and User models
 
 
-
+```python
 nano base/serializers.py
 
 
@@ -156,7 +158,7 @@ class UserSerializer(serializers.ModelSerializer):
   model = User
 
   fields = ('id', 'username', 'posts')
-
+```
 
 
 
@@ -167,7 +169,7 @@ class UserSerializer(serializers.ModelSerializer):
 Since posts is a reverse relationship on the default Django User model, it will not be included by default using the ModelSerializer class, we need to add an explicit field for it.
 
 
-
+```python
 nano base/views.py
 
 
@@ -275,7 +277,7 @@ class PostList(generics.ListCreateAPIView):
 
 
 
- def perform_create(self, serializer): <b> style="color: red;"># new</b>
+ def perform_create(self, serializer): # new
 
   serializer.save(author=self.request.user)
 
@@ -287,19 +289,11 @@ class PostDetail(generics.RetrieveUpdateDestroyAPIView):
 
  serializer_class = PostSerializer
 
- permission_classes = (permissions.IsAuthenticatedOrReadOnly,) <b> style="color: red;"># new</b>
+ permission_classes = (permissions.IsAuthenticatedOrReadOnly,) # new
 
 
 
-class UserList(generics.ListAPIView): <b> style="color: red;"># new</b>
-
- queryset = User.objects.all()
-
- serializer_class = UserSerializer
-
-
-
-class UserDetail(generics.RetrieveAPIView): <b> style="color: red;"># new</b>
+class UserList(generics.ListAPIView): # new
 
  queryset = User.objects.all()
 
@@ -307,13 +301,21 @@ class UserDetail(generics.RetrieveAPIView): <b> style="color: red;"># new</b>
 
 
 
+class UserDetail(generics.RetrieveAPIView): # new
+
+ queryset = User.objects.all()
+
+ serializer_class = UserSerializer
+
+```
 
 
 
-Note on the view above I've used&nbsp;<a href="http://www.django-rest-framework.org/api-guide/generic-views/#listcreateapiview">ListCreateAPIView</a>&nbsp;to create a read-only endpoint that lists all available Post instances and then&nbsp;<a href="http://www.django-rest-framework.org/api-guide/generic-views/#retrieveupdatedestroyapiview">RetrieveUpdateDestroyAPIView</a>&nbsp;for a detail view of individual posts which supports CRUD-like functionality.</b>
+
+Note on the view above I've used "http://www.django-rest-framework.org/api-guide/generic-views/#listcreateapiview">ListCreateAPIView;to create a read-only endpoint that lists all available Post instances and then http://www.django-rest-framework.org/api-guide/generic-views/#retrieveupdatedestroyapiview">RetrieveUpdateDestroyAPIView for a detail view of individual posts which supports CRUD-like functionality.</b>
 
 
-
+```python
 nano base/urls.py
 
 
@@ -345,7 +347,7 @@ urlpatterns = [
 
 urlpatterns = format_suffix_patterns(urlpatterns)&nbsp;<b> style="color: red;"># new</b>
 
-
+```
 
 
 Adding login to the browsable API
@@ -354,10 +356,10 @@ to add a login view to the browsable API we need to edit the URLconf in our proj
 
 
 
-Add rest_framework.urls to the route.
+Add **rest_framework.urls** to the route.
 
 
-
+```python
 nano bio_metric/urls.py
 
 
@@ -367,7 +369,7 @@ from django.contrib import admin
 
 from django.urls import path, include
 
-from django.views.generic.base import TemplateView&nbsp;
+from django.views.generic.base import TemplateView
 
 
 
@@ -375,19 +377,19 @@ urlpatterns = [
 
  path('base/', include('base.urls')),
 
- path('accounts/', include('accounts.urls')),&nbsp;
+ path('accounts/', include('accounts.urls')),
 
- path('login/', include('rest_framework.urls')),  style="color: red;"><b># new</b>
+ path('login/', include('rest_framework.urls')),  # new
 
- path('', TemplateView.as_view(template_name='home.html'), name='home'),&nbsp;
+ path('', TemplateView.as_view(template_name='home.html'), name='home'),
 
- path('accounts/', include('django.contrib.auth.urls')),&nbsp;
+ path('accounts/', include('django.contrib.auth.urls')),
 
  path('admin/', admin.site.urls),
 
 ]
 
-
+```
  Notice the name "login" above could be anything&nbsp;The important part is that "rest_framework.urls" .
 
 
@@ -403,69 +405,67 @@ python3 manage.py runserver 192.168.0.245:8000
 
 Post Lists ----- I get all the posts
 
-<a href="https://1.bp.blogspot.com/--KxD5qazM3M/XPQXOFzhYuI/AAAAAAAAMjo/6bNXiDFCF-c9HzhkrkN-9N4WAwGW4eDXwCLcBGAs/s1600/Screenshot%2B%252820%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="180" src="https://1.bp.blogspot.com/--KxD5qazM3M/XPQXOFzhYuI/AAAAAAAAMjo/6bNXiDFCF-c9HzhkrkN-9N4WAwGW4eDXwCLcBGAs/s320/Screenshot%2B%252820%2529.png" width="320" /></a>
+![](https://1.bp.blogspot.com/--KxD5qazM3M/XPQXOFzhYuI/AAAAAAAAMjo/6bNXiDFCF-c9HzhkrkN-9N4WAwGW4eDXwCLcBGAs/s1600/Screenshot%2B%252820%2529.png)
 
 Post detail ----- details of a particular post
-<div class="separator" style="clear: both; text-align: center;">
-<a href="https://1.bp.blogspot.com/-yVoV1qe6deo/XPQYWfvLk6I/AAAAAAAAMjw/QOPiaXSbqlAnU2sEVuPyTOxQLvlTllUXgCLcBGAs/s1600/Screenshot%2B%252821%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="180" src="https://1.bp.blogspot.com/-yVoV1qe6deo/XPQYWfvLk6I/AAAAAAAAMjw/QOPiaXSbqlAnU2sEVuPyTOxQLvlTllUXgCLcBGAs/s320/Screenshot%2B%252821%2529.png" width="320" /></a>
+
+![](https://1.bp.blogspot.com/-yVoV1qe6deo/XPQYWfvLk6I/AAAAAAAAMjw/QOPiaXSbqlAnU2sEVuPyTOxQLvlTllUXgCLcBGAs/s1600/Screenshot%2B%252821%2529.png) 
 
 API login
 
-<a href="https://1.bp.blogspot.com/-Nu6sLe-M2GI/XPQZHk17lUI/AAAAAAAAMj8/4ZpowqtMxfM-HFwCd_-nlJ1ImO_XLl2zQCLcBGAs/s1600/Screenshot%2B%252822%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="180" src="https://1.bp.blogspot.com/-Nu6sLe-M2GI/XPQZHk17lUI/AAAAAAAAMj8/4ZpowqtMxfM-HFwCd_-nlJ1ImO_XLl2zQCLcBGAs/s320/Screenshot%2B%252822%2529.png" width="320" /></a>
+![](https://1.bp.blogspot.com/-Nu6sLe-M2GI/XPQZHk17lUI/AAAAAAAAMj8/4ZpowqtMxfM-HFwCd_-nlJ1ImO_XLl2zQCLcBGAs/s1600/Screenshot%2B%252822%2529.png)
 
 User have login&nbsp;
 
-<a href="https://1.bp.blogspot.com/-hpjmPku3lBc/XPQj3FVtkOI/AAAAAAAAMkw/F20ozeYialYf1Xq92VHQb0PnLxTVJy7CwCLcBGAs/s1600/Screenshot%2B%2528231%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="225" src="https://1.bp.blogspot.com/-hpjmPku3lBc/XPQj3FVtkOI/AAAAAAAAMkw/F20ozeYialYf1Xq92VHQb0PnLxTVJy7CwCLcBGAs/s400/Screenshot%2B%2528231%2529.png" width="400" /></a>
-<div class="separator" style="clear: both; text-align: justify;">
- style="text-align: start;">Now you can delete the post
-<div class="separator" style="clear: both; text-align: center;">
+![](https://1.bp.blogspot.com/-hpjmPku3lBc/XPQj3FVtkOI/AAAAAAAAMkw/F20ozeYialYf1Xq92VHQb0PnLxTVJy7CwCLcBGAs/s1600/Screenshot%2B%2528231%2529.png)
+
+ Now you can delete the post
 
 
-<a href="https://1.bp.blogspot.com/-u9cxTSdzjAg/XPQjc4qTlII/AAAAAAAAMks/dOv-YRXnBQUliPch0qmRZcM_GNu3Et10ACLcBGAs/s1600/Screenshot%2B%252824%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="180" src="https://1.bp.blogspot.com/-u9cxTSdzjAg/XPQjc4qTlII/AAAAAAAAMks/dOv-YRXnBQUliPch0qmRZcM_GNu3Et10ACLcBGAs/s320/Screenshot%2B%252824%2529.png" width="320" /></a>
+
+![](https://1.bp.blogspot.com/-u9cxTSdzjAg/XPQjc4qTlII/AAAAAAAAMks/dOv-YRXnBQUliPch0qmRZcM_GNu3Et10ACLcBGAs/s1600/Screenshot%2B%252824%2529.png)
 
 I have deleted one post only two post remaining
 
-<a href="https://1.bp.blogspot.com/-SqOn11XczXc/XPQjQszK66I/AAAAAAAAMko/c1kFCKah4uIOPW8p_8iBFP2JVFqxFyP6QCLcBGAs/s1600/Screenshot%2B%252825%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="225" src="https://1.bp.blogspot.com/-SqOn11XczXc/XPQjQszK66I/AAAAAAAAMko/c1kFCKah4uIOPW8p_8iBFP2JVFqxFyP6QCLcBGAs/s400/Screenshot%2B%252825%2529.png" width="400" /></a>
+![](https://1.bp.blogspot.com/-SqOn11XczXc/XPQjQszK66I/AAAAAAAAMko/c1kFCKah4uIOPW8p_8iBFP2JVFqxFyP6QCLcBGAs/s1600/Screenshot%2B%252825%2529.png)
 
 Updating the second post
 
-<a href="https://1.bp.blogspot.com/-OhYj_hYNf5I/XPQink4X2oI/AAAAAAAAMkk/7aDkLlbN-wsSZiEGHVuTc01nu_IdAB49QCLcBGAs/s1600/Screenshot%2B%252826%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="225" src="https://1.bp.blogspot.com/-OhYj_hYNf5I/XPQink4X2oI/AAAAAAAAMkk/7aDkLlbN-wsSZiEGHVuTc01nu_IdAB49QCLcBGAs/s400/Screenshot%2B%252826%2529.png" width="400" /></a>
-
+![](https://1.bp.blogspot.com/-OhYj_hYNf5I/XPQink4X2oI/AAAAAAAAMkk/7aDkLlbN-wsSZiEGHVuTc01nu_IdAB49QCLcBGAs/s1600/Screenshot%2B%252826%2529.png)
 Creating a new post
 
 
 
-<a href="https://1.bp.blogspot.com/-1WWjcz-KGcE/XPQiMWhS6qI/AAAAAAAAMkg/lHcSvtaE5moBmhdVC9KUMVM_9V-OSKVTQCLcBGAs/s1600/Screenshot%2B%252827%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="224" src="https://1.bp.blogspot.com/-1WWjcz-KGcE/XPQiMWhS6qI/AAAAAAAAMkg/lHcSvtaE5moBmhdVC9KUMVM_9V-OSKVTQCLcBGAs/s400/Screenshot%2B%252827%2529.png" width="400" /></a>
-
+![](https://1.bp.blogspot.com/-1WWjcz-KGcE/XPQiMWhS6qI/AAAAAAAAMkg/lHcSvtaE5moBmhdVC9KUMVM_9V-OSKVTQCLcBGAs/s1600/Screenshot%2B%252827%2529.png)
 New post has been created
 
 
 
 
 
-<a href="https://1.bp.blogspot.com/-EtU7L-QT9IM/XPQhV8EIUMI/AAAAAAAAMkc/mhzR4lpqFB8428TTBiaHjKnvFZfN6zHKACLcBGAs/s1600/Screenshot%2B%252828%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="223" src="https://1.bp.blogspot.com/-EtU7L-QT9IM/XPQhV8EIUMI/AAAAAAAAMkc/mhzR4lpqFB8428TTBiaHjKnvFZfN6zHKACLcBGAs/s400/Screenshot%2B%252828%2529.png" width="400" /></a>
+![](https://1.bp.blogspot.com/-EtU7L-QT9IM/XPQhV8EIUMI/AAAAAAAAMkc/mhzR4lpqFB8428TTBiaHjKnvFZfN6zHKACLcBGAs/s1600/Screenshot%2B%252828%2529.png)
 
 List of the current posts
 
-<a href="https://1.bp.blogspot.com/-LHfz7o5Xsac/XPQl2reNuzI/AAAAAAAAMk8/WGhi4UOifjklmKk0DOdz9CWRycj9L2CiACLcBGAs/s1600/Screenshot%2B%252820%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="224" src="https://1.bp.blogspot.com/-LHfz7o5Xsac/XPQl2reNuzI/AAAAAAAAMk8/WGhi4UOifjklmKk0DOdz9CWRycj9L2CiACLcBGAs/s400/Screenshot%2B%252820%2529.png" width="400" /></a>
-&nbsp;The JSON file
+![](https://1.bp.blogspot.com/-LHfz7o5Xsac/XPQl2reNuzI/AAAAAAAAMk8/WGhi4UOifjklmKk0DOdz9CWRycj9L2CiACLcBGAs/s1600/Screenshot%2B%252820%2529.png)
+
+The JSON file
 
 
 
-<a href="https://1.bp.blogspot.com/-XKHzVm-PAoM/XPQmr3A4nWI/AAAAAAAAMlA/-tU7nSzIQkgz4-f-nrtwG0pGgl8LG-YLQCLcBGAs/s1600/Screenshot%2B%252830%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="225" src="https://1.bp.blogspot.com/-XKHzVm-PAoM/XPQmr3A4nWI/AAAAAAAAMlA/-tU7nSzIQkgz4-f-nrtwG0pGgl8LG-YLQCLcBGAs/s400/Screenshot%2B%252830%2529.png" width="400" /></a>
+![](https://1.bp.blogspot.com/-XKHzVm-PAoM/XPQmr3A4nWI/AAAAAAAAMlA/-tU7nSzIQkgz4-f-nrtwG0pGgl8LG-YLQCLcBGAs/s1600/Screenshot%2B%252830%2529.png)
 
 Again here the List of the current posts same info being returned by the JSON file above
 
-<a href="https://1.bp.blogspot.com/-tylkhOpOtD4/XPQm73Kiq4I/AAAAAAAAMlE/_qt-xC1Nu5wAkdqdNL6K_lWbjWPb0gjrgCLcBGAs/s1600/Screenshot%2B%252831%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="224" src="https://1.bp.blogspot.com/-tylkhOpOtD4/XPQm73Kiq4I/AAAAAAAAMlE/_qt-xC1Nu5wAkdqdNL6K_lWbjWPb0gjrgCLcBGAs/s400/Screenshot%2B%252831%2529.png" width="400" /></a>
+![](https://1.bp.blogspot.com/-tylkhOpOtD4/XPQm73Kiq4I/AAAAAAAAMlE/_qt-xC1Nu5wAkdqdNL6K_lWbjWPb0gjrgCLcBGAs/s1600/Screenshot%2B%252831%2529.png)
 
 We cant enumerate the deleted or non existing content by id
 
-<a href="https://1.bp.blogspot.com/-Ym6X9gmwn3Y/XPQn2Kn_w7I/AAAAAAAAMlI/s6ka68PdBUUDsp2jKojlZg8YEExt383KgCLcBGAs/s1600/Screenshot%2B%252832%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="400" src="https://1.bp.blogspot.com/-Ym6X9gmwn3Y/XPQn2Kn_w7I/AAAAAAAAMlI/s6ka68PdBUUDsp2jKojlZg8YEExt383KgCLcBGAs/s400/Screenshot%2B%252832%2529.png" width="400" /></a>
+![](https://1.bp.blogspot.com/-Ym6X9gmwn3Y/XPQn2Kn_w7I/AAAAAAAAMlI/s6ka68PdBUUDsp2jKojlZg8YEExt383KgCLcBGAs/s1600/Screenshot%2B%252832%2529.png)
 
 We can enumerate existing content by the id
 
-<a href="https://1.bp.blogspot.com/-ntYFGzLG1Tg/XPQoWQWbdqI/AAAAAAAAMlM/BJ1kbYocSpw3e-p6gKWm8W3VgmHvj1ISQCLcBGAs/s1600/Screenshot%2B%252833%2529.png" style="margin-left: 1em; margin-right: 1em;"><img border="0" data-original-height="900" data-original-width="1600" height="224" src="https://1.bp.blogspot.com/-ntYFGzLG1Tg/XPQoWQWbdqI/AAAAAAAAMlM/BJ1kbYocSpw3e-p6gKWm8W3VgmHvj1ISQCLcBGAs/s400/Screenshot%2B%252833%2529.png" width="400" /></a>
-
+![](https://1.bp.blogspot.com/-ntYFGzLG1Tg/XPQoWQWbdqI/AAAAAAAAMlM/BJ1kbYocSpw3e-p6gKWm8W3VgmHvj1ISQCLcBGAs/s1600/Screenshot%2B%252833%2529.png)
 
 
 
@@ -478,5 +478,5 @@ We can enumerate existing content by the id
 
  if you want to enumerate users you will run into this&nbsp; 'User' object has no attribute 'posts'
 
- Based on my requirement's this is enough. I can do the crud functionality on the Post if you want to do the crud functionally to the user's as well you will need to do some modification on the serializers.py style="color: red;"> and views.py  style="color: red;">you may olso want to consider securing the API probably with https.&nbsp;Very unfortunate those topic are out of scope for this post.
+ Based on my requirement's this is enough. I can do the crud functionality on the Post if you want to do the crud functionally to the user's as well you will need to do some modification on the `serializers.py`  and `views.py` you may olso want to consider securing the API probably with **https**.Very unfortunate those topic are out of scope for this post.
 
