--- a/content/psychology/4-beginner-psychology-resources/post.mdx
+++ b/content/psychology/4-beginner-psychology-resources/post.mdx
@@ -1,6 +1,6 @@
 ---
 title: Top 4 Resources to Gain a Solid Understanding of Psychology
-image: images/psychology.jpg
+image: https://1.bp.blogspot.com/-MzRpzIRzmyQ/XPRAQ5AJm7I/AAAAAAAAMlU/w1_joHJXzmQ_dS_JxpdBJx4i6Cc-yBalACLcBGAs/s400/communication-4237439_1280.jpg
 imageAttribution: https://www.vecteezy.com/free-vector/psychology
 date: 2022-10-15 # Date written, OR date edited
 category: Psychology
